# CalcIt

./: LICENSE.txt  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/workflows/: rust.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logger.rs  main.rs
src-tauri/src/parser/: calculate.rs  constants.rs  expressions.rs  mod.rs  tokens.rs
src/lib/ts/: helper.ts  types.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
